--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -18,10 +18,11 @@
   file: path={{ redis_home }} owner=ec2-user group=ec2-user state=directory recurse=yes
 
 - name: redis conf
-  lineinfile: dest={{ redis_home }}/bin/catalina.sh
-                regexp='dir./'
-                line='dir /home/ec2-user/redis-stable/'
-                state=present
+  lineinfile: dest={{ redis_home }}/redis.conf regexp='^dir ./' state=absent
+
+- name: redis conf
+  lineinfile: dest={{ redis_home }}/redis.conf insertafter='# Note that you must specify a directory here, not a file name.' line='dir /home/ec2-user/redis-stable/' state=present
+                #regexp='^dir./'
 
 - name: Go to the folder and run make
   command: chdir={{ redis_home }} make
