--- a/platform-modules/common/pom.xml
+++ b/platform-modules/common/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>im4java</artifactId>
             <version>1.4.0</version>
         </dependency>
+         <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
     		<groupId>com.moparisthebest</groupId>
     		<artifactId>junidecode</artifactId>
