--- a/platform-devops/ansible/roles/ffmpeg/tasks/main.yml
+++ b/platform-devops/ansible/roles/ffmpeg/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: Download
   become_user: ec2-user
   become: yes
-  get_url: url=http://ffmpeg.org/releases/ffmpeg-2.8.tar.gz dest=/home/ec2-user/ffmpeg-2.8.tar.gz timeout=1000 force=no owner=ec2-user
+  get_url: url=http://johnvansickle.com/ffmpeg/releases/ffmpeg-release-64bit-static.tar.xz dest=/home/ec2-user timeout=1000 force=no owner=ec2-user
 
 - name: unzip 
-  unarchive: src=/home/ec2-user/ffmpeg-2.8.tar.gz  dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ ffmpeg_home }}
+  unarchive: src=/home/ec2-user/ffmpeg*  dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates=ffmpeg-home
 
 - name: Change ownership of ffmpeg installation
   become: yes
