--- a/platform-devops/ansible/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/roles/tomcat/tasks/main.yml
@@ -1,40 +1,40 @@
 ---
 - name: Download Tomcat
-  get_url: url=http://mirror.fibergrid.in/apache/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user/apache-tomcat-8.0.36.tar.gz timeout=1000 force=no owner=ec2-user
+  get_url: url=http://mirror.fibergrid.in/apache/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user/apache-tomcat-8.0..tar.gz timeout=1000 force=no owner=ec2-user
 
 - name: Extract archive
-  unarchive: src=/home/ec2-user/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
+  unarchive: src={{ tomcat_home }}.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
 
 
 - name: Symlink install directory
-  file: src=/home/ec2-user/apache-tomcat-8.0.36 path=/usr/share/tomcat state=link
+  file: src={{ tomcat_home }} path=/usr/share/tomcat state=link
 
 - name: Change ownership of Tomcat installation
   file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
 
 - name: create Catalina
-  file: path=/home/ec2-user/apache-tomcat-8.0.36/conf/Catalina state=directory mode=755 
+  file: path={{ tomcat_home }}/conf/Catalina state=directory mode=755 
 
 
 - name: create localhost
-  file: path=/home/ec2-user/apache-tomcat-8.0.36/conf/Catalina/localhost state=directory mode=755 
+  file: path={{ tomcat_home }}/conf/Catalina/localhost state=directory mode=755 
 
 - name: add templates
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:
     - { name: 'server.xml', destination: '/usr/share/tomcat/conf/' }
     - { name: 'iptables-save', destination: '/etc/sysconfig/iptables' }
-    - { name: 'catalina.j2', destination: '/home/ec2-user/apache-tomcat-8.0.36/bin/catalina.sh' }
-    - { name: 'language-service.xml', destination: '/home/ec2-user/apache-tomcat-8.0.36/conf/Catalina/localhost' }
-    - { name: 'learning-service.xml', destination: '/home/ec2-user/apache-tomcat-8.0.36/conf/Catalina/localhost' }
-    - { name: 'search-service.xml', destination: '/home/ec2-user/apache-tomcat-8.0.36/conf/Catalina/localhost' }
+    - { name: 'catalina.j2', destination: '{{ tomcat_home }}/bin/catalina.sh' }
+    - { name: 'language-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+    - { name: 'learning-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+    - { name: 'search-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
 
 - name: Install Tomcat init script
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=755
   notify: restart iptables
 
 - name: set permission
-  file: path=/home/ec2-user/apache-tomcat-8.0.36  mode=0755 owner=ec2-user group=ec2-user recurse=yes
+  file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
 
 
 
