--- a/platform-devops/ansible/roles/elasticsearch/tasks/main.yml
+++ b/platform-devops/ansible/roles/elasticsearch/tasks/main.yml
@@ -15,36 +15,36 @@
 - name: Give permissions
   file: path={{ item }} owner=ec2-user group=ec2-user mode=755 recurse=yes state=directory
   with_items:
-     - {{ es_home }}/plugins
-     - {{ es_home }}
+     - /usr/share/elasticsearch/plugins
+     - /usr/share/elasticsearch
 
-- stat: path={{ es_home }}/plugins/head
+- stat: path=/usr/share/elasticsearch/plugins/head
   register: check_head
 
 
-- stat: path={{ es_home }}/plugins/analysis-icu
+- stat: path=/usr/share/elasticsearch/plugins/analysis-icu
   register: check_icu
 
 
-- stat: path={{ es_home }}/plugins/delete-by-query
+- stat: path=/usr/share/elasticsearch/plugins/delete-by-query
   register: check_delete
 
-- stat: path={{ es_home }}/plugins/mapper-murmur3
+- stat: path=/usr/share/elasticsearch/plugins/mapper-murmur3
   register: check_mapper
 
 - name: Install plugin elasticsearch-head
-  command: {{ es_home }}/bin/plugin install mobz/elasticsearch-head
+  command: /usr/share/elasticsearch/bin/plugin install mobz/elasticsearch-head
   when: check_head.stat.exists == False
 
 - name:  Install plugin  analysis-icu
-  command: {{ es_home }}/bin/plugin install analysis-icu
+  command: /usr/share/elasticsearch/bin/plugin install analysis-icu
   when: check_icu.stat.exists == False
 
 - name:  Install plugin delete-by-query
-  command: {{ es_home }}/bin/plugin install delete-by-query
+  command: /usr/share/elasticsearch/bin/plugin install delete-by-query
   when: check_delete.stat.exists == False
 
 - name:  Install plugin  mapper-murmur3
-  command: {{ es_home }}/bin/plugin install mapper-murmur3
+  command: /usr/share/elasticsearch/bin/plugin install mapper-murmur3
   when: check_mapper.stat.exists == False
   notify: start elasticsearch 
