--- a/language-platform/module/services/src/test/resources/database.properties
+++ b/language-platform/module/services/src/test/resources/database.properties
@@ -1,7 +1,7 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpbuilddb?characterEncoding=UTF-8
-db.username=lpsandboxdb
-db.password=lp5andb0x
+db.url=jdbc:mysql://localhost:3306/ekstep
+db.username=root
+db.password=root
 db.initialSize=2
 db.maxActive=10
 db.validationQuery=select 1
