--- a/platform-devops/ansible/roles/definition_update/tasks/main.yml
+++ b/platform-devops/ansible/roles/definition_update/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
 # tasks file for definition
 - name: run definition_script
+  debug: pwd
+- name: run definition_script
   shell: sh roles/definition_update/files/definition_script.sh
