--- a/platform-devops/ansible/roles/definition_update/tasks/main.yml
+++ b/platform-devops/ansible/roles/definition_update/tasks/main.yml
@@ -8,4 +8,4 @@
   debug: msg="{{ check.stdout }}"
 
 - name: run script
-  shell: roles/definiton_update/files/definition_script.sh
+  shell: sh /home/jenkins/workspace/LP_Definition_Update/platform-devops/ansible/roles/definiton_update/files/definition_script.sh
