--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -2,9 +2,16 @@
 #tasks file for deployartifact
 
 - name: stop tomcat
-  become_user: ec2-user
   become: yes
   service: name=tomcat state=stopped
+
+- name: Change ownership of Tomcat installation
+  file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
+
+- name: Change ownership of Tomcat installation
+  file: path=/home/ec2-user/apache-tomcat-8.0.36 owner=ec2-user group=ec2-user state=directory recurse=yes
+
+
 
 
 - name: copy the database.properties
