--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -7,13 +7,15 @@
 
 - name: Change ownership of Tomcat installation
   become: yes
-  file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
+  file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user recurse=yes
 
 - name: Change ownership of Tomcat installation
   become: yes
-  file: path=/home/ec2-user/apache-tomcat-8.0.36 owner=ec2-user group=ec2-user state=directory recurse=yes
+  file: path=/home/ec2-user/apache-tomcat-8.0.36 owner=ec2-user group=ec2-user  recurse=yes
 
-
+- name: Change ownership of /data
+  become: yes
+  file: path=/data owner=ec2-user group=ec2-user recurse=yes mode=0755
 
 
 - name: copy the database.properties
