Added become_method: sudo to deploy role

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -2,13 +2,14 @@
 #tasks file for deployartifact
 
 - name: pwd
+  become_method: sudo
   become: yes
   command: pwd
   ignore_errors: yes
 
 
 
-  
+
 - name: Change ownership of Tomcat installation
   become: yes
   file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user recurse=yes
