Updated deploy role for testing

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -2,13 +2,9 @@
 #tasks file for deployartifact
 
 - name: pwd
-  become_method: sudo
+  become_method: ec2-user
   become: yes
   command: pwd
-  ignore_errors: yes
-
-
-
 
 - name: Change ownership of Tomcat installation
   become: yes
