--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -45,27 +45,35 @@
   template: src=search/elasticsearch.properties.j2 dest=/data/properties/search/elasticsearch.properties
 #------------------------------------------------------------------------------------
 - name: copy the artifacts files 
+  become: yes
   copy: src=learning-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
 
 - name: copy the artifacts files
+  become: yes
   copy: src=search-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
 
 - name: copy the artifacts files
+  become: yes
   copy: src=language-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
 
 - name: copy the artifacts file config-service.war
+  become: yes
   copy: src=config-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
 #------------------------------------------------------------------------------------
 - name: remove learning-service
+  become: yes
   file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/learning-service state=absent
 
 - name: remove search-service
+  become: yes
   file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/search-service state=absent
 
 - name: remove language-service
+  become: yes
   file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/language-service state=absent
 
 - name: remove config-service
+  become: yes
   file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/config-service state=absent
 
 
