--- a/searchIndex-platform/module/searchindex-common/pom.xml
+++ b/searchIndex-platform/module/searchindex-common/pom.xml
@@ -19,6 +19,16 @@
 
 	<dependencies>
 		<dependency>
+    		<groupId>com.typesafe.akka</groupId>
+    		<artifactId>akka-actor_2.10</artifactId>
+    		<version>2.3.9</version>
+    	</dependency>
+    	<dependency>
+  			<groupId>com.typesafe.akka</groupId>
+  			<artifactId>akka-remote_2.10</artifactId>
+  			<version>2.3.9</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
