--- a/searchIndex-platform/module/search-service/pom.xml
+++ b/searchIndex-platform/module/search-service/pom.xml
@@ -46,6 +46,13 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>search-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
