--- a/orchestrator/module/request-router/pom.xml
+++ b/orchestrator/module/request-router/pom.xml
@@ -43,6 +43,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>search-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>orchestrator-dac-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
