--- a/searchIndex-platform/module/composite-search-api/pom.xml
+++ b/searchIndex-platform/module/composite-search-api/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>search-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
