--- a/platform-modules/service/src/test/resources/content.properties
+++ b/platform-modules/service/src/test/resources/content.properties
@@ -4,6 +4,9 @@ output.zipfile = /data/tmp/story.zip
 source.folder  = /data/tmp/temp2/
 save.directory = /data/tmp/temp/
 
+# Content 2 vec analytics URL
+CONTENT_TO_VEC_URL = http://172.31.27.233:9000/content-to-vec
+
 # FOR CONTENT WORKFLOW PIPELINE (CWP) 
 
 #--Content Workflow Pipeline Mode
