--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -51,5 +51,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.neo4j.procedure/apoc -->
+		<dependency>
+		    <groupId>org.neo4j.procedure</groupId>
+		    <artifactId>apoc</artifactId>
+		    <version>1.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
