--- a/platform-devops/ansible/roles/neo4j/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j/tasks/main.yml
@@ -6,7 +6,7 @@
   unarchive: src={{ user_home }}/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }} copy=no   owner=ec2-user group=ec2-user creates={{ neo4j_home }}
 
 - name: Backup
-  file: path={{ user_home }}/backups mode=755 owner=ec2-user state=directory
+  file: path={{ user_home }}/backups mode=755 owner=ec2-user group=ec2-user state=directory
 
 - name: Backup
   copy: src=/data/graphDB dest={{ user_home }}/backups/ backup=yes
