--- a/platform-devops/ansible/roles/neo4j/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: stop tomcat
+  become: yes
+  service: name=tomcat state=stopped
+
 - name: install neo4j
   get_url: url=http://dist.neo4j.org/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }}/neo4j-community-3.0.4-unix.tar.gz timeout=1000 force=no owner=ec2-user
 
@@ -21,6 +25,11 @@
 - name: run script
   shell: sh {{ user_home }}/neo4j_script.sh
 
+
+- name: start tomcat
+  become: yes
+  service: name=tomcat state=started
+  
 - name: Replace Working directory line
   lineinfile: dest={{ neo4j_home }}/conf/neo4j.conf regexp='dbms.allow_format_migration=true' insertafter='^dbms.allow_format_migration=true' line='#dbms.allow_format_migration=true' state=present
 
