Changed mongod user

--- a/platform-devops/ansible/roles/Stopservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/Stopservice/tasks/main.yml
@@ -4,6 +4,8 @@
   service: name=elasticsearch state=stopped
 
 - name: mongodb start
+  become_user: mongod
+  become: yes
   service: name=mongod state=stopped
 
 - name: Check if redis is running
