--- a/platform-devops/ansible/roles/Stopservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/Stopservice/tasks/main.yml
@@ -15,7 +15,7 @@
   ignore_errors: true
  
 - name: kill process
-  command: kill -9 `pgrep -f redis`
+  shell: kill -9 `pgrep -f redis`
   when: "redis_process.stdout >= '1'"
 
 
