--- a/platform-devops/ansible/roles/Stopservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/Stopservice/tasks/main.yml
@@ -1,8 +1,11 @@
 ---
 - name: stop elasticsearch
+  become: yes
   service: name=elasticsearch state=stopped
 
 - name: mongodb start
+  become_user: mongod
+  become: yes
   service: name=mongod state=stopped
 
 - name: Check if redis is running
@@ -12,7 +15,7 @@
   ignore_errors: true
  
 - name: kill process
-  command: kill -9 `pgrep -f redis`
+  shell: `kill -9 `pgrep -f redis``
   when: "redis_process.stdout >= '1'"
 
 
