--- a/platform-devops/ansible/roles/elasticsearch/handlers/main.yml
+++ b/platform-devops/ansible/roles/elasticsearch/handlers/main.yml
@@ -1,8 +1,11 @@
 - name: stop elasticsearch
+  become: yes
   service: name=elasticsearch state=stopped
 
 - name: start elasticsearch
+  become: yes
   service: name=elasticsearch state=started
 
 - name: restart elasticsearch
+  become: yes
   service: name=elasticsearch state=restarted
