--- a/platform-tests/functional-tests/pom.xml
+++ b/platform-tests/functional-tests/pom.xml
@@ -50,13 +50,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>taxonomy-service</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>assessment-service</artifactId>
+			<artifactId>ekstep-manager</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
