--- a/platform-devops/ansible/roles/neo4j/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j/tasks/main.yml
@@ -1,50 +1,43 @@
 ---
-- name: stop tomcat
-  become: yes
-  service: name=tomcat state=stopped
+- name: Backup
+  file: path={{ user_home }}/neo4j mode=755 owner=ec2-user group=ec2-user state=directory
 
-- name: install neo4j
-  get_url: url=http://dist.neo4j.org/neo4j-community-2.2.0-unix.tar.gz dest={{ user_home }}/neo4j-community-2.2.0-unix.tar.gz timeout=1000 force=no owner=ec2-user
+- name: install neo4j 2.2.0
+  get_url: url=http://dist.neo4j.org/neo4j-community-2.2.0-unix.tar.gz dest={{ user_home }}/neo4j/neo4j-community-2.2.0-unix.tar.gz timeout=1000 force=no owner=ec2-user
 
-- name: Unarchive neo4j
-  unarchive: src={{ user_home }}/neo4j-community-2.2.0-unix.tar.gz dest={{ user_home }} copy=no   owner=ec2-user group=ec2-user creates={{ user_home }}/neo4j-community-2.2.0
+- name: Unarchive neo4j 2.2.0
+  command: tar -zxvf {{ user_home }}/neo4j/neo4j-community-2.2.0-unix.tar.gz 
 
-- name: install neo4j
-  get_url: url=http://dist.neo4j.org/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }}/neo4j-community-3.0.4-unix.tar.gz timeout=1000 force=no owner=ec2-user
+- name: install neo4j 3.0.4
+  get_url: url=http://dist.neo4j.org/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }}/neo4j/neo4j-community-3.0.4-unix.tar.gz timeout=1000 force=no owner=ec2-user
 
-- name: Unarchive neo4j
-  unarchive: src={{ user_home }}/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }} copy=no   owner=ec2-user group=ec2-user creates={{ user_home }}/neo4j-community-3.0.4
+- name: Unarchive neo4j 3.0.4
+  unarchive: src={{ user_home }}/neo4j/neo4j-community-3.0.4-unix.tar.gz dest={{ user_home }}/neo4j/ copy=no   owner=ec2-user group=ec2-user creates={{ user_home }}/neo4j/neo4j-community-3.0.4
 
-- name: install neo4j
-  get_url: url=http://dist.neo4j.org/jexp/shell/neo4j-shell-tools_2.3.2.zip dest={{ user_home }}/neo4j-community-2.2.0/lib/neo4j-shell-tools_2.3.2.zip timeout=1000 force=no owner=ec2-user
+- name: install neo4j shell-tools_2.3.2
+  get_url: url=http://dist.neo4j.org/jexp/shell/neo4j-shell-tools_2.3.2.zip dest={{ user_home }}/neo4j/neo4j-shell-tools_2.3.2.zip timeout=1000 force=no owner=ec2-user
 
-- name: Unarchive neo4j
-  unarchive: src={{ user_home }}/neo4j-community-2.2.0/lib/neo4j-shell-tools_2.3.2.zip dest={{ user_home }}/neo4j-community-2.2.0/lib/ copy=no owner=ec2-user group=ec2-user creates={{ user_home }}/neo4j-community-2.2.0/lib/neo4j-shell-tools_2.3.2
+- name: Unarchive neo4j shell-tools_2.3.2
+  unarchive: src={{ user_home }}/neo4j/neo4j-shell-tools_2.3.2.zip dest={{ user_home }}/neo4j/neo4j-community-2.2.0/lib/ copy=no owner=ec2-user group=ec2-user 
 
-- name: install neo4j
-  get_url: url=http://dist.neo4j.org/jexp/shell/neo4j-shell-tools_3.0.1.zip dest={{ user_home }}/neo4j-community-3.0.4/lib/neo4j-shell-tools_3.0.1 timeout=1000 force=no owner=ec2-user
+- name: install neo4j shell-tools_3.0.1
+  get_url: url=http://dist.neo4j.org/jexp/shell/neo4j-shell-tools_3.0.1.zip dest={{ user_home }}/neo4j/neo4j-shell-tools_3.0.1.zip timeout=1000 force=no owner=ec2-user
 
-- name: Unarchive neo4j
-  unarchive: src={{ user_home }}/neo4j-community-3.0.4/lib/neo4j-shell-tools_3.0.1.zip dest={{ user_home }}/neo4j-community-3.0.4/lib copy=no   owner=ec2-user group=ec2-user creates={{ user_home }}/neo4j-community-3.0.4/lib/neo4j-shell-tools_3.0.1
+- name: Unarchive neo4j shell-tools_3.0.1
+  unarchive: src={{ user_home }}/neo4j/neo4j-shell-tools_3.0.1.zip dest={{ user_home }}/neo4j/neo4j-community-3.0.4/lib copy=no owner=ec2-user group=ec2-user 
 
 - name: Backup
-  file: path={{ user_home }}/backups mode=755 owner=ec2-user group=ec2-user state=directory
+  file: path={{ user_home }}/neo4j/backups mode=755 owner=ec2-user group=ec2-user state=directory
 
 
 - name: Backup graphmls
-  file: path={{ user_home }}/graphmls mode=755 owner=ec2-user group=ec2-user state=directory
-
-
-- name: Backup
-  become: yes
-  command: cp -r /data/graphDB/* {{ user_home }}/backups/
+  file: path={{ user_home }}/neo4j/graphmls mode=755 owner=ec2-user group=ec2-user state=directory
 
 - name: copy template
-  template: src=neo4j_script.j2 dest={{ user_home }}/neo4j_script.sh
+  template: src=neo4j_script.j2 dest={{ user_home }}/neo4j/neo4j_script.sh
 
 - name: run script
-  become: yes
-  shell: sh {{ user_home }}/neo4j_script.sh
+  shell: sh {{ user_home }}/neo4j/neo4j_script.sh
 
 
 
