--- a/platform-devops/ansible/roles/neo4j/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Backup
+- name: neo4j folder
   file: path={{ user_home }}/neo4j mode=755 owner=ec2-user group=ec2-user state=directory
 
 - name: install neo4j 2.2.0
