--- a/platform-modules/service/src/main/resources/language-map.properties
+++ b/platform-modules/service/src/main/resources/language-map.properties
@@ -4,12 +4,12 @@ te=Telugu
 ka=Kannada
 ta=Tamil
 as=Assamese
-be=Bengali
+bn=Bengali
 bo=Bodo
 gu=Gujarati
 ko=Konkani
 ml=Malayalam
-ma=Marathi
+mr=Marathi
 ne=Nepali
 or=Odia
 pj=Punjabi
