removed search service health check as part of the deployment as ES index does not exist for the first time

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -108,9 +108,9 @@
   fail: msg="Health check failed for language-service"
   when: "language_process.stdout >='1'"
 
-- name: failed search-service health check
-  fail: msg="Health check failed for search-service"
-  when: "search_process.stdout >= '1'"
+# - name: failed search-service health check
+#   fail: msg="Health check failed for search-service"
+#   when: "search_process.stdout >= '1'"
 
 - name: failed learning-service health check
   fail: msg="Health check failed for learning-service"
