--- a/docs/domain_model_v2/api-docs/swagger/assessmentItem/Assessment_Item_Deployable.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessmentItem/Assessment_Item_Deployable.yaml
@@ -341,7 +341,7 @@ definitions:
       filter:
         $ref: '#/definitions/filters'
       sortOrder:
-        $ref: '#/definitions/sortOder'
+        $ref: '#/definitions/sortOrder'
       resultSize:
         description: resultSize
         type: number
@@ -362,7 +362,7 @@ definitions:
         type: string
       value:
         type: string
-  sortOder:
+  sortOrder:
     title: sortOder
     type: object
     properties:
