--- a/docs/language_model/api-docs/language-platform-api.yaml
+++ b/docs/language_model/api-docs/language-platform-api.yaml
@@ -570,7 +570,7 @@ definitions:
       filterProperty:
         type: "string"
         description: "Search request can contain multiple filters. Each filter has\
-          \ a kay, which is one of the properties of word object and value can be\
+          \ a key, which is one of the properties of word object and value can be\
           \ an array (to do an IN search) or a single value (to do an exact match\
           \ search)"
       limit:
